2009-03-15  Greg Bolsinga  <bolsinga@apple.com>

        Reviewed by David Kilzer.

        <rdar://problem/6668875> Normalize Geolocation results

        * platform/mac/GeolocationServiceMac.mm:
        (-[WebCoreCoreLocationObserver locationManager:didUpdateToLocation:fromLocation:]):

2009-03-15  Greg Bolsinga  <bolsinga@apple.com>

        Reviewed by David Kilzer.

        Update ::toString format as suggested by Darin Adler.

        * page/Geoposition.cpp:
        (WebCore::Geoposition::toString):

2009-03-15  David Kilzer  <ddkilzer@apple.com>

        <rdar://problem/6668238> WebCore is registering text encodings needlessly from KURL constructor.

        Reviewed by Darin Adler.

        Yet another case where we would trigger extended encoding loading needlessly.

        * platform/text/TextEncoding.cpp:
        (WebCore::TextEncoding::encodingForFormSubmission):

2009-03-15  Simon Fraser  <simon.fraser@apple.com>

        Build fix: no review.

        * rendering/style/ContentData.h:

2009-03-15  David Kilzer  <ddkilzer@apple.com>

        Bug 24542: Improve ContentData encapsulation

        <https://bugs.webkit.org/show_bug.cgi?id=24542>

        Reviewed by Simon Fraser.

        No tests since there is no change in behavior.

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::createObject): Used getter methods
        instead of data members on ContentData class.  Used isImage()
        convenience method.
        * rendering/RenderObjectChildList.cpp:
        (WebCore::RenderObjectChildList::updateBeforeAfterContent): Ditto.

        * rendering/style/ContentData.cpp:
        (WebCore::ContentData::clear): Extracted code into
        deleteContent() method.
        (WebCore::ContentData::dataEquivalent): Added.  Extracted code
        from StyleRareNonInheritedData::contentDataEquivalent().
        (WebCore::ContentData::deleteContent): Added.  Used by setter
        methods.