@@ -1,3 +1,13 @@
+2009-03-15  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Darin Adler.
+
+        https://bugs.webkit.org/show_bug.cgi?id=24549
+        Impose a limit on Access-Control-Max-Age value
+
+        * loader/CrossOriginPreflightResultCache.cpp:
+        (WebCore::CrossOriginPreflightResultCacheItem::parse):
+
 2009-03-15  Greg Bolsinga  <bolsinga@apple.com>
 
         Reviewed by David Kilzer.
